# alienfx-linux

./: README.md  conanfile.py
AlienFX-SDK/: CMakeLists.txt
AlienFX-SDK/include/: AlienFX_SDK.h  libusb_helper.h
AlienFX-SDK/src/: AlienFX_SDK.cpp  libusb_helper.cpp
AlienFan-SDK/: CMakeLists.txt
Example-App/: main.cpp
alienfx-cli/: CMakeLists.txt
alienfx-cli/src/: main.cpp
